# PIdisk_open_source

./: .gitignore  .pidiskignore.example  LICENSE  README.md  README.ru.md  go.mod  go.sum  main.go  main.py  wails.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PROFILES.md  SECURITY.md  SYNC.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: connection.ts  dialogs.ts  events.ts  files.ts  profiles.ts  sync.ts  transfer.ts  trash.ts
frontend/src/components/: AppEvents.tsx  BreadcrumbsBar.tsx  (+12 more)
internal/domain/: connection.go  errors.go  fs.go  knownhost.go  profile.go  settings.go  sync.go  transfer.go  trash.go
internal/platform/: defaults.go  paths.go  shellescape.go  sshkeygen.go
internal/ports/: event_bus.go  known_hosts.go  metrics.go  profile_repo.go  secret_store.go  settings_repo.go  sftp_port.go  ssh_port.go  sync_repo.go  trash_repo.go  watcher_port.go
internal/usecase/: connection_uc.go  files_uc.go  files_uc_test.go  host_key_broker.go  profiles_uc.go  profiles_uc_test.go  settings_uc.go  sync_uc.go  transfer_uc.go  trash_uc.go
internal/version/: version.go
legacy/tauri-pidisk/: README.md  package.json
legacy/tauri-pidisk/src-tauri/: Cargo.toml  package-lock.json  package.json  settings.json  sync_config.json  tauri.conf.json
legacy/tauri-pidisk/src-tauri/capabilities/: dialog.json
legacy/tauri-pidisk/src-tauri/src/: main.rs  settings.json
scripts/: build-linux.sh  build-mac.sh  build-win.ps1  capture-screenshots.sh
(+66 files in other folders)
